--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "datatables.net": "^2.1.7",
     "formik": "^2.4.6",
     "json-server": "^1.0.0-beta.1",
     "multi-range-slider-react": "^2.0.7",
